--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "name": "h-buttons",
   "description": "Static render function for buttons",
   "version": "0.0.2",
-  "main": "index.js",
+  "main": "index.csjs.js",
   "directories": {
     "example": "example"
   },
