--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "build": "browserify -t csjs-injectify example/index.js > example/bundle.js"
   },
   "dependencies": {
-    "csjs": "^1.0.1",
-    "xtend": "^4.0.1"
+    "csjs": "^1.0.1"
   },
   "devDependencies": {
     "bel": "^4.3.1",
@@ -13,7 +12,7 @@
     "wzrd": "^1.3.1"
   },
   "name": "h-buttons",
-  "description": "Static render function for buttons",
+  "description": "csjs styles for buttons",
   "version": "0.0.3",
   "main": "index.csjs.js",
   "directories": {
@@ -27,7 +26,8 @@
     "buttons",
     "ui",
     "hyperscript",
-    "bel"
+    "bel",
+    "csjs"
   ],
   "author": "Nick Thomas <nichoth@gmail.com>",
   "license": "ISC",
